[tool.poetry]
name = "gino-aiohttp"
version = "0.1.0-alpha"
description = "An extension for GINO to integrate with AIOHTTP"
license = "BSD-3-Clause"
authors = ["Fantix King <fantix.king@gmail.com>"]
maintainers = ["Aobo Shi <shiaobo8@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/python-gino/gino-aiohttp"
repository = "https://github.com/python-gino/gino-aiohttp"
documentation = "https://python-gino.readthedocs.io/"
keywords = ["sqlalchemy", "python3", "gino", "aiohttp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

include = ["examples/**/*", "tests/**/*"]

[tool.poetry.dependencies]
python = "^3.5"
aiohttp = "*"
gino = { git = "https://github.com/python-gino/gino.git" }

[tool.poetry.dev-dependencies]
async_generator = "^1.10"
black = { version = "^19.10b0", python = ">=3.6" }

# tests
pytest = "^5.3.2"
pytest-asyncio = "^0.10.0"
pytest-mock = "^1.13.0"
pytest-cov = "^2.8.1"
requests = "^2.22.0"

[tool.poetry.plugins."gino.extensions"]
"starlette" = "gino_aiohttp"

[tool.black]
line-length = 80

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

