[tool.poetry]
name = "gino-aiohttp-demo"
version = "0.1.0"
description = "A demo of a production-ready project based on GINO and aiohttp."
authors = ["Fantix King <fantix.king@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.7.2"
gino-aiohttp = {path = "../.."} # gino = { version = "^1.0", extras = ["aiohttp"] }
importlib_metadata = { version = "^1.3.0", python = "<3.8" }
alembic = "^1.4.0"
psycopg2 = "^2.8.4"
click = "^7.1.1"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
async_generator = "^1.10"
pytest-asyncio = "^0.10.0"

[tool.poetry.plugins."gino_aiohttp_demo.modules"]
"index" = "gino_aiohttp_demo.views.index"
"users" = "gino_aiohttp_demo.views.users"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
